--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B9773FB74B8A9AA1D09CBBA97E69208A
+CopyrightNotice=Copyright Samuel Carriere 2020
+
