Course 93: Accessing An Object’s Name

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/EscapeRoom")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="EscapeRoomGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Assets/TestMap.TestMap
+
