Course 122: Using find component by class()

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Assets/TestMap.TestMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_EscapeRoomGameMode.BP_EscapeRoomGameMode_C
 
